# zkp-circuit-example

./: Cargo.toml
arkworks/: Cargo.toml
bellman_ce_circuit/: Cargo.toml
bellman_ce_circuit/src/: lib.rs  mimc.rs  sapling_sha265.rs
confident_transaction/: Cargo.toml
confident_transaction/src/: circuit.rs  lib.rs
curve/: Cargo.toml
curve/src/: alt_bn128.rs  bls12_381.rs  lib.rs
src/: cube.rs  main.rs  multiply.rs
verifier/: Cargo.toml
verifier/.criterion/fibonacci 8/base/: estimates.json  sample.json  tukey.json
verifier/.criterion/fibonacci 8/change/: estimates.json
verifier/.criterion/fibonacci 8/new/: estimates.json  sample.json  tukey.json
verifier/benches/: fibonacci.rs
verifier/src/: lib.rs  loopring.sol  mimc.rs  verifier.sol  verify.sol
verifier/src/contract/: eddsa.rs  etec.rs  jubjub.rs  merkle_tree.rs  mimc.rs  mod.rs  w_naf.rs
verifier/src/contract/ethsnark/: MerkleTree.sol  MiMC.sol  MiMC_hash.sol  MiMCpe5_generated.sol  wNAF.sol
