[package]
name = "confident_transaction"
version = "0.1.0"
authors = ["zk616153275 <geniusreturndevour@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"

#ff = { git = 'https://github.com/matterinc/ff', features = ["derive"] }
#pairing = { git = 'https://github.com/matterinc/pairing' }
sapling-crypto = { git = 'https://github.com/matterinc/sapling-crypto', tag = "0.0.4" }
bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0"  }