[package]
name = "curve"
version = "0.1.0"
authors = ["zk616153275 <geniusreturndevour@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls = { package = "bls12_381", version = "0.3.1" }
bn = { git = "https://github.com/paritytech/bn", default-features = false }
zkp-u256 = "0.2.0"
num-bigint = "0.3"
num-traits = "0.2"
group = "0.8.0"

[dev-dependencies]
hex-literal = "0.2.1"
rand = { version = "0.5", features = ["i128_support"], default-features = false }
rustc-hex = { version = "2", default-features = false }
