[package]
name = "verifier"
version = "0.1.0"
authors = ["zk616153275 <geniusreturndevour@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zkp-u256 = "0.2.0"
once_cell = "1.5.2"
tiny-keccak = { version = "2.0", features = ["fips202"] }
zkp-u256 = { git = "https://github.com/patractlabs/OpenZKP", branch = "master"}


[dependencies.num-traits]
version = "0.2.10"
default_features = false

[dependencies.num]
version = "0.2.0"

[dependencies.num-bigint]
version = "0.2.2"

[dependencies.rustc-hex]
version = "1.0.0"

[dev-dependencies]
criterion = "0.1"

[[bench]]
name = "fibonacci"
harness = false  #不使用内建的基准
